fix: Fixed header responsiveness alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -120,8 +120,13 @@ p {
 }
 
 header {
-  width: 80rem;
+  max-width: 80rem;
   margin: 0 auto;
+}
+@media (max-width: 768px) {
+  header {
+    width: 100%;
+  }
 }
 
 .nav {
@@ -131,7 +136,7 @@ header {
   align-items: baseline;
   position: fixed;
   background-color: #FFFFFF;
-  width: 80rem;
+  max-width: 80rem;
   z-index: 1;
 }
 @media (max-width: 768px) {
@@ -140,6 +145,7 @@ header {
     gap: 1rem;
     align-items: center;
     padding: 1rem 5rem;
+    width: 100%;
   }
 }
 .nav__name {
